force-app/main/default/objects/eContacts__Settings__c/eContacts__Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>eContacts Settings</label>
</CustomObject>