force-app/main/default/objects/eContacts__Settings__c/fields/eContacts__Advanced_Form_Whitelist__c.field-meta.xml
<CustomField>
    <fullName>eContacts__Advanced_Form_Whitelist__c</fullName>
    <label>Advanced Form Whitelist</label>
    <length>255</length>
    <type>Text</type>
</CustomField>