force-app/main/default/objects/eContacts__Settings__c/fields/eContacts__API_Server__c.field-meta.xml
<CustomField>
    <fullName>eContacts__API_Server__c</fullName>
    <inlineHelpText>This field is only utilized for dedicated OCR servers</inlineHelpText>
    <label>API Server</label>
    <length>255</length>
    <type>Text</type>
</CustomField>