force-app/main/default/objects/eContacts__Settings__c/fields/eContacts__Chatter_Features__c.field-meta.xml
<CustomField>
    <fullName>eContacts__Chatter_Features__c</fullName>
    <defaultValue>262143</defaultValue>
    <label>Chatter Features</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>