force-app/main/default/objects/eContacts__Settings__c/fields/eContacts__Chatter_Tags__c.field-meta.xml
<CustomField>
    <fullName>eContacts__Chatter_Tags__c</fullName>
    <label>Chatter Tags</label>
    <length>255</length>
    <type>Text</type>
</CustomField>