force-app/main/default/objects/eContacts__Settings__c/fields/eContacts__CompanyLogoURL__c.field-meta.xml
<CustomField>
    <fullName>eContacts__CompanyLogoURL__c</fullName>
    <label>Company Logo URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>