force-app/main/default/objects/eContacts__Settings__c/fields/eContacts__CompanyNameField__c.field-meta.xml
<CustomField>
    <fullName>eContacts__CompanyNameField__c</fullName>
    <label>CompanyNameField</label>
    <length>255</length>
    <type>Text</type>
</CustomField>