force-app/main/default/objects/eContacts__Settings__c/fields/eContacts__DefaultAccountLookupFilter__c.field-meta.xml
<CustomField>
    <fullName>eContacts__DefaultAccountLookupFilter__c</fullName>
    <description>This is the default criteria to use when filtering accounts for lookup between Contacts</description>
    <label>DefaultAccountLookupFilter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>