force-app/main/default/objects/eContacts__Settings__c/fields/eContacts__Disable_Account_Create_from_Queue__c.field-meta.xml
<CustomField>
    <fullName>eContacts__Disable_Account_Create_from_Queue__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This removes the ability to create Account records from the Contacts Tab on Scanning Queue</description>
    <label>Disable Account Create from Queue</label>
    <type>Checkbox</type>
</CustomField>