force-app/main/default/objects/eContacts__Settings__c/fields/eContacts__Disable_Account_Quick_Create__c.field-meta.xml
<CustomField>
    <fullName>eContacts__Disable_Account_Quick_Create__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, user is taken to standard Account create screen instead of quick create</description>
    <label>Disable Account Quick Create</label>
    <type>Checkbox</type>
</CustomField>