force-app/main/default/objects/eContacts__Settings__c/fields/eContacts__Disable_View_vCard__c.field-meta.xml
<CustomField>
    <fullName>eContacts__Disable_View_vCard__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable View vCard</label>
    <type>Checkbox</type>
</CustomField>