force-app/main/default/objects/eContacts__Settings__c/fields/eContacts__Duplicate_Rules__c.field-meta.xml
<CustomField>
    <fullName>eContacts__Duplicate_Rules__c</fullName>
    <label>Duplicate Rules</label>
    <length>255</length>
    <type>Text</type>
</CustomField>