force-app/main/default/objects/eContacts__Settings__c/fields/eContacts__Field_Labels_Always_On__c.field-meta.xml
<CustomField>
    <fullName>eContacts__Field_Labels_Always_On__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checking this option will make the field labels on the queue page visible at all times</description>
    <inlineHelpText>Checking this option will make the field labels on the queue page visible at all times</inlineHelpText>
    <label>Field Labels Always On</label>
    <type>Checkbox</type>
</CustomField>