force-app/main/default/objects/eContacts__Settings__c/fields/eContacts__First_Time_User_Settings__c.field-meta.xml
<CustomField>
    <fullName>eContacts__First_Time_User_Settings__c</fullName>
    <defaultValue>262143</defaultValue>
    <inlineHelpText>First time users will be shown additional information to help guide them through using the application. This will be enabled by default at the org level but overridden at the user level once the user has explored the app.</inlineHelpText>
    <label>First Time User Settings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>