force-app/main/default/objects/eContacts__Settings__c/fields/eContacts__Form_Blacklist__c.field-meta.xml
<CustomField>
    <fullName>eContacts__Form_Blacklist__c</fullName>
    <label>Form Blacklist</label>
    <length>255</length>
    <type>Text</type>
</CustomField>