force-app/main/default/objects/eContacts__Settings__c/fields/eContacts__Hide_All_Cards_Toggle__c.field-meta.xml
<CustomField>
    <fullName>eContacts__Hide_All_Cards_Toggle__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide All Cards Toggle</label>
    <type>Checkbox</type>
</CustomField>