force-app/main/default/objects/eContacts__Settings__c/fields/eContacts__Hide_App_Menu_OCR__c.field-meta.xml
<CustomField>
    <fullName>eContacts__Hide_App_Menu_OCR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide App Menu OCR</label>
    <type>Checkbox</type>
</CustomField>