force-app/main/default/objects/eContacts__Settings__c/fields/eContacts__Hide_Barcode_Icon__c.field-meta.xml
<CustomField>
    <fullName>eContacts__Hide_Barcode_Icon__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide Barcode Icon</label>
    <type>Checkbox</type>
</CustomField>