force-app/main/default/objects/eContacts__Settings__c/fields/eContacts__Hide_Checkin_Enhancement__c.field-meta.xml
<CustomField>
    <fullName>eContacts__Hide_Checkin_Enhancement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide Checkin Enhancement</label>
    <type>Checkbox</type>
</CustomField>