force-app/main/default/objects/eContacts__Settings__c/fields/eContacts__Hide_Create_Case__c.field-meta.xml
<CustomField>
    <fullName>eContacts__Hide_Create_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide Create Case</label>
    <type>Checkbox</type>
</CustomField>