force-app/main/default/objects/eContacts__Settings__c/fields/eContacts__Hide_Log_A_Call__c.field-meta.xml
<CustomField>
    <fullName>eContacts__Hide_Log_A_Call__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide Log A Call</label>
    <type>Checkbox</type>
</CustomField>