force-app/main/default/objects/eContacts__Settings__c/fields/eContacts__Hide_Mobile_App_Branding__c.field-meta.xml
<CustomField>
    <fullName>eContacts__Hide_Mobile_App_Branding__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Sets access to App Branding in Scan Mobile App v2</description>
    <label>Hide Mobile App Branding</label>
    <type>Checkbox</type>
</CustomField>