force-app/main/default/objects/eContacts__Settings__c/fields/eContacts__Hide_Mobile_Destination__c.field-meta.xml
<CustomField>
    <fullName>eContacts__Hide_Mobile_Destination__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Sets access to Destination in Scan Mobile App v2</description>
    <label>Hide Mobile Destination</label>
    <type>Checkbox</type>
</CustomField>