force-app/main/default/objects/eContacts__Settings__c/fields/eContacts__Hide_Mobile_Forms__c.field-meta.xml
<CustomField>
    <fullName>eContacts__Hide_Mobile_Forms__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide Forms Icon</label>
    <type>Checkbox</type>
</CustomField>