force-app/main/default/objects/eContacts__Settings__c/fields/eContacts__Hide_Mobile_OCR_Enterprise__c.field-meta.xml
<CustomField>
    <fullName>eContacts__Hide_Mobile_OCR_Enterprise__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide Mobile OCR Enterprise</label>
    <type>Checkbox</type>
</CustomField>