force-app/main/default/objects/eContacts__Settings__c/fields/eContacts__Hide_Mobile_QR_Reader__c.field-meta.xml
<CustomField>
    <fullName>eContacts__Hide_Mobile_QR_Reader__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide Mobile QR Reader</label>
    <type>Checkbox</type>
</CustomField>