force-app/main/default/objects/eContacts__Settings__c/fields/eContacts__Hide_Mobile_Queue_Switch__c.field-meta.xml
<CustomField>
    <fullName>eContacts__Hide_Mobile_Queue_Switch__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Hide Mobile Queue Switch</label>
    <type>Checkbox</type>
</CustomField>