force-app/main/default/objects/eContacts__Settings__c/fields/eContacts__Hide_Mobile_Save_to_CSV__c.field-meta.xml
<CustomField>
    <fullName>eContacts__Hide_Mobile_Save_to_CSV__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Hide Mobile Save to CSV</label>
    <type>Checkbox</type>
</CustomField>