force-app/main/default/objects/eContacts__Settings__c/fields/eContacts__Hide_Mobile_Save_to_Device__c.field-meta.xml
<CustomField>
    <fullName>eContacts__Hide_Mobile_Save_to_Device__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Sets access to Save to Device in Scan Mobile App v2</description>
    <label>Hide Mobile Save to Phone</label>
    <type>Checkbox</type>
</CustomField>