force-app/main/default/objects/eContacts__Settings__c/fields/eContacts__Hide_Mobile_Settings__c.field-meta.xml
<CustomField>
    <fullName>eContacts__Hide_Mobile_Settings__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Sets access to Settings in Scan Mobile App v2</description>
    <label>Hide Mobile Control Panel</label>
    <type>Checkbox</type>
</CustomField>