force-app/main/default/objects/eContacts__Settings__c/fields/eContacts__Hide_Mobile_Signature__c.field-meta.xml
<CustomField>
    <fullName>eContacts__Hide_Mobile_Signature__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Hide Mobile Signature</label>
    <type>Checkbox</type>
</CustomField>