force-app/main/default/objects/eContacts__Settings__c/fields/eContacts__Hide_Mobile_Upgrade__c.field-meta.xml
<CustomField>
    <fullName>eContacts__Hide_Mobile_Upgrade__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Sets access to Upgrade in Scan Mobile App v2</description>
    <label>Hide Mobile Upgrade</label>
    <type>Checkbox</type>
</CustomField>