force-app/main/default/objects/eContacts__Settings__c/fields/eContacts__Hide_Mobile_Voice__c.field-meta.xml
<CustomField>
    <fullName>eContacts__Hide_Mobile_Voice__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Hide Mobile Save to Voice</label>
    <type>Checkbox</type>
</CustomField>