force-app/main/default/objects/eContacts__Settings__c/fields/eContacts__Lead_Notes_Field__c.field-meta.xml
<CustomField>
    <fullName>eContacts__Lead_Notes_Field__c</fullName>
    <defaultValue>&quot;Description&quot;</defaultValue>
    <description>The field to use when storing notes added during the card upload process</description>
    <inlineHelpText>The field to use when storing notes added during the card upload process</inlineHelpText>
    <label>Lead Notes Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>