force-app/main/default/objects/eContacts__Settings__c/fields/eContacts__Leads_Tab__c.field-meta.xml
<CustomField>
    <fullName>eContacts__Leads_Tab__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Leads Tab</label>
    <type>Checkbox</type>
</CustomField>