force-app/main/default/objects/eContacts__Settings__c/fields/eContacts__Lookup_Result_Fields__c.field-meta.xml
<CustomField>
    <fullName>eContacts__Lookup_Result_Fields__c</fullName>
    <description>A list of fields to show when displaying the results of a search in the lookup dialog on the queue page. The value should be a JSON object with a comma-delimited list of field names as the value and the object name as the key.</description>
    <label>Lookup Result Fields</label>
    <length>255</length>
    <type>Text</type>
</CustomField>