force-app/main/default/objects/eContacts__Settings__c/fields/eContacts__Mobile_Queue_Only__c.field-meta.xml
<CustomField>
    <fullName>eContacts__Mobile_Queue_Only__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Mobile Queue Only</label>
    <type>Checkbox</type>
</CustomField>