force-app/main/default/objects/eContacts__Settings__c/fields/eContacts__Mobile_Styling__c.field-meta.xml
<CustomField>
    <fullName>eContacts__Mobile_Styling__c</fullName>
    <label>Mobile Styling</label>
    <length>255</length>
    <type>Text</type>
</CustomField>