force-app/main/default/objects/eContacts__Settings__c/fields/eContacts__Notes_Intro_Message__c.field-meta.xml
<CustomField>
    <fullName>eContacts__Notes_Intro_Message__c</fullName>
    <label>Notes Intro Message</label>
    <type>TextArea</type>
</CustomField>