force-app/main/default/objects/eContacts__Settings__c/fields/eContacts__Org_Namespace__c.field-meta.xml
<CustomField>
    <fullName>eContacts__Org_Namespace__c</fullName>
    <label>Org Namespace</label>
    <length>255</length>
    <type>Text</type>
</CustomField>