force-app/main/default/objects/eContacts__Settings__c/fields/eContacts__Quantity__c.field-meta.xml
<CustomField>
    <fullName>eContacts__Quantity__c</fullName>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>