force-app/main/default/objects/eContacts__Settings__c/fields/eContacts__Show_Notes__c.field-meta.xml
<CustomField>
    <fullName>eContacts__Show_Notes__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the user will be able to upload notes with card images and the notes field will be added to the queue page forms</description>
    <inlineHelpText>When checked, the user will be able to upload notes with card images and the notes field will be added to the queue page forms</inlineHelpText>
    <label>Show Notes</label>
    <type>Checkbox</type>
</CustomField>