force-app/main/default/objects/eContacts__Settings__c/fields/eContacts__Simple_Form_Whitelist_2__c.field-meta.xml
<CustomField>
    <fullName>eContacts__Simple_Form_Whitelist_2__c</fullName>
    <label>Simple Form Whitelist__2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>