force-app/main/default/objects/eContacts__Settings__c/fields/eContacts__User_Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>eContacts__User_Hierarchy__c</fullName>
    <description>Class that provides the user hierarchy</description>
    <label>User Hierarchy</label>
    <length>100</length>
    <type>Text</type>
</CustomField>